# sgd-neural-network

./: .gitignore  CMakeLists.txt  README.md  RUN  actualPredictions  actualPredictions2  actualPredictions3  actualPredictions4  actualPredictions5  actualPredictions6  notes.txt
Release/: CMakeCache.txt
python_evaluator/: README.md
src/: ActivationFunction.h  InputManager.cpp  InputManager.h  InputPreprocessor.h  Makefile  NeuralNetwork.cpp  NeuralNetwork.h  NeuronLayer.cpp  NeuronLayer.h  WeightLayer.c  WeightLayer.cpp  WeightLayer.h  lol.h  main  main.cpp  test.cpp
